# deepfake_check

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
backend/: main.py
src/deepfake_check/: __init__.py  analyzer.py  base.py  cli.py
src/deepfake_check/audio/: analyzer.py
src/deepfake_check/video/: analyzer.py
tests/: test_analyzer.py  test_base.py
